jellyfin_archive/jellyfin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  tls:
  - hosts:
      - jellyfin.home          # Must match the CN/SAN in your certificate
    secretName: ingress.home
  rules:
    - host: jellyfin.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
